# reknir

./: .env.example  .env.prod.example  .env.production.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CLOUDFLARE.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  MIGRATION_GUIDE.md  MULTI_COMPANY_IMPLEMENTATION_EXAMPLES.md  MVP_STATUS.md  PRODUCTION.md  QUICKSTART.md  README.md  create_auth_tables.sql  deploy.sh  docker-compose.prod.yml  docker-compose.yml  factory-reset.sh  fix-ts-errors.sh  pixi.toml  reset.sh  setup-local.sh  setup-production.sh
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml  requirements.txt  seed_templates.py  update_template_codes.py  update_template_codes_final.py
backend/alembic/: README  env.py
backend/app/: __init__.py  cli.py  config.py  database.py  dependencies.py  main.py  schema_version.py
backend/scripts/: seed_templates.py
docs/: AI_ASSISTANT.md  AUTH_SETUP.md  CLAUDE.md  CLOUDFLARE.md  DEPLOYMENT.md  FRONTEND_COMPONENTS.md  INVOICE_FEATURE.md  MULTI_COMPANY_ANALYSIS.md  MULTI_COMPANY_QUICK_REFERENCE.md  PHASE2_PROGRESS.md  PLAN.md  PRODUCTION.md  QUICKSTART.md  ROADMAP.md
frontend/: .eslintrc.cjs  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json
mcp-server/: .env.example  EXAMPLES.md  README.md  claude_desktop_config.json  pyproject.toml
mcp-server/src/: __init__.py  client.py  server.py
mcp-server/src/tools/: __init__.py  accounts.py  companies.py  invoices.py  suppliers.py
nginx/: README.md  nginx.conf
scripts/: backup.sh
(+181 files in other folders)
